k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: soulzaa-prod
  labels:
    app.kubernetes.io/name: soulzaa
    environment: production
